--- a/game.html
+++ b/game.html
@@ -124,7 +124,7 @@
                             for(i=subOut.length-1; i >= 0; i--){
                                 $('#tabs-'+subOut[i].number).tabs();
                                 while((iStat >= 0)&&(stations[iStat].number > subOut[i].number)){
-                                    $('#tabs-'+clusters[iCl].number+'-'+subOut[i].number).append("<p><input type='checkbox' id='tabs1-1-1' />"+stations[iStat].name+"</p>");
+                                    $('#tabs-'+clusters[iCl].number+'-'+subOut[i].number).prepend("<p><input type='checkbox' id='tabs1-1-1' />"+stations[iStat].name+"</p>");
                                 iStat--;
                                 }
                             }
