--- a/game.html
+++ b/game.html
@@ -170,9 +170,11 @@
                 <option value="21">21 / 22</option>
                 <option value="22">22 / 23</option>
                 <option value="23">23 / 24</option>
-           </select> 
-           <input type="button" id="loadEvents" value="Load events" />
-           <div id="progressbar"></div>
+            </select> 
+            <input type="button" id="loadEvents" value="Load events" />
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">
+                <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" />
+            </a>
         </p>
         <div id = "tabs">
         </div>
